--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -7,6 +7,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>location</string>
+    </array>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>地图功能需要您的定位服务，否则无法使用，如果您需要使用后台定位功能请选择“始终允许”。</string>
 	<key>NSLocationAlwaysUsageDescription</key>
